--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 asgiref==3.2.7
-Django==3.0.7
-pkg-resources==0.0.0
-pytz==2020.1
-sqlparse==0.3.1
-k-mxt-w3
+Django>=3.0.7
+pytz>=2020.1
+sqlparse>=0.3.1
+k-mxt-w3==1.0.6
 django-crispy-forms
 plotly
 #awsebcli
