Added Dockerfile and creating superuser in the app

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-asgiref==3.2.7
 Django>=3.0.7
 pytz>=2020.1
 sqlparse>=0.3.1
 k-mxt-w3==1.0.6
 django-crispy-forms
-plotly
+plotly==4.8.2
 #awsebcli
