--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --cov-report=term --cov=./ --reuse-db
+addopts = --cov-report=html --cov=./ --reuse-db
 testpaths = ./clustering/tests.py
 DJANGO_SETTINGS_MODULE = clusteringengine.settings
 
